--- a/public/setting.html
+++ b/public/setting.html
@@ -9,11 +9,11 @@
 
 <body>
   <div class="container">
-    <h1>New Relic Monitor</h1>
+    <h1>Magellan Setting</h1>
 
-    <div class="alert alert-info">
-      The configuration is only saved on your iPhone; not saved on our server.
-    </div>
+    <p class="lead">
+      Tell me your New Relic configuration.
+    </p>
 
     <form role="form">
       <div class="form-group">
@@ -23,6 +23,10 @@
       <div class="form-group">
         <label for="appid">Application ID</label>
         <input type="text" class="form-control" id="appid">
+      </div>
+
+      <div class="alert alert-info">
+        The configuration is only saved on your iPhone; not saved on our server.
       </div>
 
       <button type="submit" class="btn btn-default">Done</button>
